fix: typo in certificates route
[BREAKING CHANGE]
